--- a/Tests/tests.html
+++ b/Tests/tests.html
@@ -123,7 +123,7 @@
                   "
                 >
                   <button class="btnadd mb-3" id="addClassButton">
-                    <a href="/Courses/AddCourses.html">Add Tests</a>
+                    <a href="/Tests/AddTest.html">Add Tests</a>
                   </button>
                   <form>
                     <div class="form-group">
