--- a/PETOnline/pet.html
+++ b/PETOnline/pet.html
@@ -123,7 +123,7 @@
                   "
                 >
                   <button class="btnadd mb-3" id="addClassButton">
-                    <a href="/Courses/AddCourses.html">Add PET</a>
+                    <a href="/PETOnline/AddPet.html">Add PET</a>
                   </button>
                   <form>
                     <div class="form-group">
