--- a/Pdf/AddPdf.html
+++ b/Pdf/AddPdf.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Ebook</title>
+    <title>Add PDF</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -74,8 +74,8 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/EBook/ebook.html">back</a>
-                <h2 class="mt-5">Add E-book</h2>
+                <a href="/Pdf/AddPdf.html">back</a>
+                <h2 class="mt-5">Add Pdf</h2>
               </div>
 
               <div class="bars">
@@ -205,7 +205,7 @@
 
             // Populate the select with data from the API
             data.forEach((category) => {
-              if (category.type == "book") {
+              if (category.type == "pdf") {
                 const option = document.createElement("option");
                 option.value = category.id;
                 option.textContent = category.name;
@@ -243,7 +243,7 @@
         formData.append("discount", discount);
         formData.append("lang", lang);
         formData.append("is_free", parseInt(isfree));
-        formData.append("type", "ebook");
+        formData.append("type", "pdf");
 
         try {
           // const response = await fetch("https://api.bhattacharjeesolution.in/book/api/category/add.php", {
@@ -262,7 +262,7 @@
             // Handle success (e.g., display a success message)
             console.log("Form submitted successfully!");
             // window.history.back();
-            window.location.href = "ebook.html";
+            window.location.href = "pdf.html";
           } else {
             // Handle error (e.g., display an error message)
             console.error("Form submission failed!");
