--- a/Pdf/pdf.html
+++ b/Pdf/pdf.html
@@ -123,7 +123,7 @@
                   "
                 >
                   <button class="btnadd mb-3" id="addClassButton">
-                    <a href="/Courses/AddCourses.html">Add Pdf</a>
+                    <a href="/Pdf/AddPdf.html">Add Pdf</a>
                   </button>
                   <form>
                     <div class="form-group">
