--- a/Video/video.html
+++ b/Video/video.html
@@ -123,7 +123,7 @@
                   "
                 >
                   <button class="btnadd mb-3" id="addClassButton">
-                    <a href="/Courses/AddCourses.html">Add Video</a>
+                    <a href="/Video/AddVideo.html">Add Video</a>
                   </button>
                   <form>
                     <div class="form-group">
