--- a/Dashboard.html
+++ b/Dashboard.html
@@ -44,33 +44,38 @@
           <!-- dashboard -->
           <div class="col-10 maindash">
             <div class="maindashboard">
-              <div class="row navbar">
-                <div class="col-1">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
+              <div>
+                <div class="row navbar">
+                  <div class="col-1">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                  </div>
 
-                <div class="col-2 dropdown">
-                  <i
-                    class="fa-regular fa-user dropdown-toggle"
-                    id="userDropdown"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                  ></i>
-                  <div class="dropdown-menu" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Profile</a>
-                    <a class="dropdown-item" href="#">Settings</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Logout</a>
+                  <div class="col-2 dropdown">
+                    <i
+                      class="fa-regular fa-user dropdown-toggle"
+                      id="userDropdown"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    ></i>
+                    <div class="dropdown-menu" aria-labelledby="userDropdown">
+                      <a class="dropdown-item" href="#">Profile</a>
+                      <a class="dropdown-item" href="#">Settings</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#" onclick="handlelogout()"
+                        >Logout</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
+
               <h4 class="mt-2" style="margin-left: 30px">
                 Welcome - Super Admin
               </h4>
               <div class="container-fluid">
-                <div class="row mt-5">
-                  <div class="col-sm-12 col-md-4">
+                <div class="row mt-5 mb-5">
+                  <div class="col-sm-12 col-md-3">
                     <div class="card">
                       <div
                         class="card-body d-flex flex-column justify-content-center"
@@ -82,12 +87,14 @@
                         "
                       >
                         <h3 class="card-title">Customers</h3>
-                        <h3 class="card-text mt-3 blue">262</h3>
+                        <h3 class="card-text mt-3 blue" id="customercount">
+                          0
+                        </h3>
                         <p class="card-text">Total Customers</p>
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-12 col-md-3">
                     <div class="card">
                       <div
                         class="card-body d-flex flex-column justify-content-center"
@@ -98,13 +105,13 @@
                             Verdana, sans-serif;
                         "
                       >
-                        <h3 class="card-title">Sales</h3>
-                        <h3 class="card-text mt-3 blue">2</h3>
-                        <p class="card-text">Total Sales</p>
+                        <h3 class="card-title">News</h3>
+                        <h3 class="card-text mt-3 blue" id="newscount">0</h3>
+                        <p class="card-text">Total News</p>
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-12 col-md-3">
                     <div class="card">
                       <div
                         class="card-body d-flex flex-column justify-content-center"
@@ -114,9 +121,95 @@
                             Verdana, sans-serif;
                         "
                       >
-                        <h3 class="card-title">Profits</h3>
-                        <h3 class="card-text mt-3 blue">262</h3>
+                        <h3 class="card-title">PDF</h3>
+                        <h3 class="card-text mt-3 blue" id="pdfcount">0</h3>
                         <p class="card-text">Total Profits</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                        style="
+                          font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                            'Lucida Grande', 'Lucida Sans Unicode', Geneva,
+                            Verdana, sans-serif;
+                        "
+                      >
+                        <h3 class="card-title">Book</h3>
+                        <h3 class="card-text mt-3 blue" id="bookcount">0</h3>
+                        <p class="card-text">Total Books</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mt-5 mb-5">
+                  <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                        style="
+                          background-color: rgb(222, 220, 245);
+                          font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                            'Lucida Grande', 'Lucida Sans Unicode', Geneva,
+                            Verdana, sans-serif;
+                        "
+                      >
+                        <h3 class="card-title">Video</h3>
+                        <h3 class="card-text mt-3 blue" id="videocount">0</h3>
+                        <p class="card-text">Total Video</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                        style="
+                          background-color: rgb(246, 191, 238);
+                          font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                            'Lucida Grande', 'Lucida Sans Unicode', Geneva,
+                            Verdana, sans-serif;
+                        "
+                      >
+                        <h3 class="card-title">Test</h3>
+                        <h3 class="card-text mt-3 blue" id="testcount">0</h3>
+                        <p class="card-text">Total Test</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                        style="
+                          background-color: rgb(245, 139, 139);
+                          font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                            'Lucida Grande', 'Lucida Sans Unicode', Geneva,
+                            Verdana, sans-serif;
+                        "
+                      >
+                        <h3 class="card-title">Quiz</h3>
+                        <h3 class="card-text mt-3 blue" id="quizcount">0</h3>
+                        <p class="card-text">Total Quizs</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                        style="
+                          background-color: rgb(241, 246, 191);
+                          font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                            'Lucida Grande', 'Lucida Sans Unicode', Geneva,
+                            Verdana, sans-serif;
+                        "
+                      >
+                        <h3 class="card-title">E-Book</h3>
+                        <h3 class="card-text mt-3 blue" id="ebookcount">0</h3>
+                        <p class="card-text">Total E-Books</p>
                       </div>
                     </div>
                   </div>
@@ -127,6 +220,30 @@
         </div>
       </div>
     </div>
+    <script>
+      const token = localStorage.getItem("user");
+      fetch("https://api.bhattacharjeesolution.in/book/api/dashboard.php", {
+        headers: {
+          "Content-Type": "application/json",
+          token: token,
+        },
+      })
+        .then((response) => response.json())
+        .then((res) => {
+          console.log(res);
+          document.getElementById("ebookcount").innerText = res.ebook;
+          document.getElementById("quizcount").innerText = res.quiz;
+          document.getElementById("testcount").innerText = res.test;
+          document.getElementById("videocount").innerText = res.video;
+          document.getElementById("bookcount").innerText = res.book;
+          document.getElementById("pdfcount").innerText = res.pdf;
+          document.getElementById("newscount").innerText = res.news;
+        })
+        .catch((err) => {
+          console.log(err);
+        });
+    </script>
+    <script src="logout.js"></script>
     <script src="Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
   </body>
