change edit page

--- a/EBook/ebook.html
+++ b/EBook/ebook.html
@@ -228,11 +228,16 @@
                       <input type="number" id="discount" name="discount" />
 
                       <label for="edittype">Type:</label>
-                      <select id="edittype" name="edittype" required>
-                        <option value="pet">PETest</option>
+                      <select id="edittype" name="edittype" required disabled>
+                        <option value="book">Book</option>
+                        <option value="ebook" selected>E-Book</option>
+                        <option value="news">News</option>
                         <option value="video">Video</option>
-                        <option value="test">Test</option>
                         <option value="pdf">PDF</option>
+                        <option value="test">Test</option>
+                        <option value="pet">PET course</option>
+                        <option value="quiz">Quiz</option>
+                        <option value="lecture">Lecture</option>
                       </select>
                       <br />
 
