--- a/EBook/AddPdf.html
+++ b/EBook/AddPdf.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Category</title>
+    <title>Add PDFs</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Style.css" />
-    <link rel="stylesheet" href="addCategory.css" />
+    <link rel="stylesheet" href="/Courses/addCategory.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -43,8 +43,6 @@
               scrolling="no"
               height="100%"
             ></iframe>
-            <!-- In your main HTML page -->
-            <!-- #include virtual="sidebar.html" -->
           </div>
 
           <!-- dashboard -->
@@ -74,8 +72,8 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/Category/Category.html">back</a>
-                <h2 class="mt-5">Add Category</h2>
+                <a href="/EBook/DetailEbook.html">back</a>
+                <h2 class="mt-5">Add PDFs - <span id="coursename"></span></h2>
               </div>
 
               <div class="bars">
@@ -83,39 +81,9 @@
               </div>
               <div class="addCategory">
                 <form action="#" method="post" onsubmit="submitForm(event)">
-                  <label for="name">Name:</label>
+                  <label for="name">Title:</label>
                   <input type="text" id="name" name="name" required />
 
-                  <label for="image">Image:</label>
-                  <input
-                    type="file"
-                    id="image"
-                    name="image"
-                    accept="image/*"
-                    required
-                    onchange="previewImage()"
-                  />
-                  <br />
-                  <div class="imgPreview">
-                    <img
-                      id="imagePreview"
-                      src="#"
-                      alt="Image Preview"
-                      style="display: none; max-width: 200px; max-height: 200px"
-                    />
-                  </div>
-                  <label for="type">Type:</label>
-                  <select id="type" name="type" required>
-                    <option value="book">Book</option>
-                    <!-- <option value="ebook">E-Book</option> -->
-                    <option value="news">News</option>
-                    <option value="video">Video</option>
-                    <option value="pdf">PDF</option>
-                    <option value="test">Test</option>
-                    <option value="pet">PET course</option>
-                    <option value="quiz">Quiz</option>
-                    <option value="lecture">Lecture</option>
-                  </select>
                   <br />
                   <label for="description">Description:</label>
                   <textarea
@@ -124,6 +92,20 @@
                     rows="4"
                     required
                   ></textarea>
+
+                  <label for="dayno"
+                    >Day Number: (The Resource will be free for day 0! )</label
+                  >
+                  <input type="number" id="dayno" name="dayno" />
+
+                  <label for="pdf">Content ( PDF File ):</label>
+                  <input
+                    type="file"
+                    id="pdf"
+                    name="pdf"
+                    accept=".pdf"
+                    required
+                  />
 
                   <button type="submit">Submit</button>
                 </form>
@@ -137,43 +119,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       const token = localStorage.getItem("user");
-      function previewImage() {
-        const input = document.getElementById("image");
-        const preview = document.getElementById("imagePreview");
+      const vidid = localStorage.getItem("addvideoId");
+      const vidname = localStorage.getItem("addvideoName");
+      console.log("id:", vidid);
 
-        if (input.files && input.files[0]) {
-          const reader = new FileReader();
-
-          reader.onload = function (e) {
-            preview.style.display = "block";
-            preview.src = e.target.result;
-          };
-
-          reader.readAsDataURL(input.files[0]);
-        } else {
-          preview.style.display = "none";
-          preview.src = "";
-        }
-      }
+      document.getElementById("coursename").innerText = vidname;
 
       async function submitForm(event) {
         event.preventDefault();
         console.log("inside");
         const name = document.getElementById("name").value;
-        const type = document.getElementById("type").value;
         const description = document.getElementById("description").value;
-        const image = document.getElementById("image").files[0];
+        // const category = document.getElementById("category").value;
+        const pdf = document.getElementById("pdf").files[0];
+        const dayno = document.getElementById("dayno").value;
 
         const formData = new FormData();
-        formData.append("name", name);
+        formData.append("title", name);
         formData.append("description", description);
-        formData.append("image", image);
-        formData.append("type", type);
+        formData.append("course_id", vidid);
+        formData.append("content", pdf);
+        formData.append("day_no", dayno);
+        // formData.append("type", type);
 
         try {
           // const response = await fetch("https://api.bhattacharjeesolution.in/book/api/category/add.php", {
           const response = await fetch(
-            "https://api.bhattacharjeesolution.in/book/api/add-category.php",
+            "https://api.bhattacharjeesolution.in/book/api/pdf.php",
             {
               method: "POST",
               body: formData,
@@ -186,7 +158,7 @@
           if (response.ok) {
             // Handle success (e.g., display a success message)
             console.log("Form submitted successfully!");
-            window.location.href = "Category.html";
+            window.location.href = "DetailEbook.html";
           } else {
             // Handle error (e.g., display an error message)
             console.error("Form submission failed!");
@@ -195,6 +167,8 @@
           console.error("An error occurred:", error);
         }
       }
+
+      window.addEventListener("load", fetchCategoryData);
     </script>
   </body>
 </html>
