--- a/EBook/addebook.html
+++ b/EBook/addebook.html
@@ -205,7 +205,7 @@
 
             // Populate the select with data from the API
             data.forEach((category) => {
-              if (category.type == "book") {
+              if (category.type == "ebook") {
                 const option = document.createElement("option");
                 option.value = category.id;
                 option.textContent = category.name;
