--- a/Orders/OrderDetail.html
+++ b/Orders/OrderDetail.html
@@ -88,6 +88,10 @@
                     <tr>
                       <th>Order Id</th>
                       <th>Product Name</th>
+                      <th>Customer name</th>
+                      <th>Mail</th>
+                      <th>Phone Number</th>
+                      <th>Product quantity</th>
                       <th>Payment method</th>
                       <th>Total Price</th>
                       <th>Product Order Date</th>
