--- a/Pdf/AddPdf.html
+++ b/Pdf/AddPdf.html
@@ -74,7 +74,7 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/Pdf/AddPdf.html">back</a>
+                <a href="/Pdf/pdf.html">back</a>
                 <h2 class="mt-5">Add Pdf</h2>
               </div>
 
