--- a/Tests/AddTest.html
+++ b/Tests/AddTest.html
@@ -74,7 +74,7 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/Pdf/AddPdf.html">back</a>
+                <a href="/Tests/tests.html">back</a>
                 <h2 class="mt-5">Add Test</h2>
               </div>
 
@@ -262,7 +262,7 @@
             // Handle success (e.g., display a success message)
             console.log("Form submitted successfully!");
             // window.history.back();
-            window.location.href = "tests.html";
+            // window.location.href = "tests.html";
           } else {
             alert(data.error || "Error while saving data!");
             // Handle error (e.g., display an error message)
