--- a/PETOnline/AddPet.html
+++ b/PETOnline/AddPet.html
@@ -259,11 +259,21 @@
           );
 
           if (response.ok) {
-            // Handle success (e.g., display a success message)
-            console.log("Form submitted successfully!");
-            // window.history.back();
-            window.location.href = "pet.html";
+            const data = await response.json();
+            if (data.error) {
+              alert(data.error || "Error while adding");
+            } else {
+              // Handle success (e.g., display a success message)
+              console.log("Form submitted successfully!");
+              // window.history.back();
+              // window.location.href = "pet.html";
+            }
           } else {
+            const data = await response.json();
+            console.log(data);
+            if (data.error) {
+              alert(data.error || "Error while adding");
+            }
             // Handle error (e.g., display an error message)
             console.error("Form submission failed!");
           }
