--- a/PETOnline/AddPet.html
+++ b/PETOnline/AddPet.html
@@ -266,7 +266,7 @@
               // Handle success (e.g., display a success message)
               console.log("Form submitted successfully!");
               // window.history.back();
-              // window.location.href = "pet.html";
+              window.location.href = "pet.html";
             }
           } else {
             const data = await response.json();
