--- a/Tests/AddTest.html
+++ b/Tests/AddTest.html
@@ -262,7 +262,7 @@
             // Handle success (e.g., display a success message)
             console.log("Form submitted successfully!");
             // window.history.back();
-            // window.location.href = "tests.html";
+            window.location.href = "tests.html";
           } else {
             alert(data.error || "Error while saving data!");
             // Handle error (e.g., display an error message)
