--- a/PETOnline/pet.html
+++ b/PETOnline/pet.html
@@ -158,6 +158,7 @@
                       <th>Price</th>
                       <th>Discount</th>
                       <th>Type</th>
+                      <th>Language</th>
                       <th>Description</th>
                       <th>Add Resourses</th>
                       <th>Action</th>
