added ebook route

--- a/EBook/DetailEbook.html
+++ b/EBook/DetailEbook.html
@@ -165,7 +165,7 @@
                   <a href="/Courses/AddTest.html">Add Tests</a>
                 </button> -->
                 <button class="btnadd mb-3" id="addClassButton">
-                  <a href="/Courses/AddPdf.html">Add Pdf</a>
+                  <a href="/Ebook/AddPdf.html">Add Pdf</a>
                 </button>
                 <!-- <button class="btnadd mb-3" id="addClassButton">
                   <a href="/Courses/AddPet.html">Add PET</a>
