--- a/EBook/addebookff.html
+++ b/EBook/addebookff.html
@@ -73,7 +73,7 @@
               <!-- maincontent   -->
               <div>
                 <button class="btnadd btn-primary mb-3">
-                  <a href="/EBook/ebook.html">back</a>
+                  <a href="/Ebook/ebook.html">back</a>
                 </button>
                 <!-- <a href="/Banner/Banner.html">back</a> -->
                 <h2 class="mt-3">Add E-Book</h2>
