change file name to ebook

--- a/EBook/ebook.html
+++ b/EBook/ebook.html
@@ -123,7 +123,7 @@
                   "
                 >
                   <button class="btnadd mb-3" id="addClassButton">
-                    <a href="/EBook/addEbook.html">Add E-Book</a>
+                    <a href="/ebook/addEbook.html">Add E-Book</a>
                   </button>
                   <form>
                     <div class="form-group">
