--- a/EBook/AddPdf.html
+++ b/EBook/AddPdf.html
@@ -72,7 +72,7 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/ebook/DetailEbook.html">back</a>
+                <a href="/Ebook/DetailEbook.html">back</a>
                 <h2 class="mt-5">Add PDFs - <span id="coursename"></span></h2>
               </div>
 
