--- a/EBook/addebook.html
+++ b/EBook/addebook.html
@@ -74,7 +74,7 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/ebook/ebook.html">back</a>
+                <a href="/Ebook/ebook.html">back</a>
                 <h2 class="mt-5">Add E-book</h2>
               </div>
 
