changed some things

--- a/Question/question.html
+++ b/Question/question.html
@@ -12,9 +12,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     /> -->
-    <link rel="stylesheet" href="/courses/table.css" />
-    <link rel="stylesheet" href="/courses/popUpStyle.css" />
-    <link rel="stylesheet" href="/courses/addCategory.css" />
+    <link rel="stylesheet" href="/Courses/table.css" />
+    <link rel="stylesheet" href="/Courses/popUpStyle.css" />
+    <link rel="stylesheet" href="/Courses/addCategory.css" />
     <link rel="stylesheet" href="question.css" />
     <script src="/blockMobile.js"></script>
     <link
